# arch-pat

./: CMakeLists.txt  Makefile  main.cpp  sqrteq.cpp  sqrteq.h  test_sqrteq.cpp
